# FP_haskell

./: .gitignore  CHANGELOG.md  DockerCompose.yml  DockerEntrypoint.sh  LICENSE  README.md  app.cabal  cabal.project  output.txt
.devcontainer/: Dockerfile  README.md  devcontainer.json  docker-compose.yml
app/: Main.hs
data/misc/: parseExample.txt
data/pages/: no_email_phi_30.oil.shopping_testing.0.html  no_email_us_5.Pocket video camera.shopping_testing.0.html  no_email_us_5.Television.shopping_testing.0.html  no_email_us_5.Television.shopping_testing.1.html  no_email_us_5.pullover.shopping_testing.0.html  no_email_us_5.pumps.shopping_testing.0.html  no_email_us_5.rain suit.shopping_testing.0.html  no_email_us_5.sandal.shopping_testing.0.html  no_email_us_5.scrub.shopping_testing.0.html  no_email_us_5.shirt.shopping_testing.0.html  no_email_us_5.shoes.shopping_testing.0.html  no_email_us_5.short.shopping_testing.0.html  no_email_us_5.skirt.shopping_testing.0.html  no_email_us_5.smart phone.shopping_testing.0.html  no_email_us_5.sneaker.shopping_testing.0.html  no_email_us_5.socks.shopping_testing.0.html  no_email_us_5.strap.shopping_testing.0.html  no_email_us_5.suitcase.shopping_testing.0.html  no_email_us_5.sunglasses.shopping_testing.0.html  no_email_us_5.sweater.shopping_testing.0.html  no_email_us_5.swimsuit.shopping_testing.0.html  no_email_us_5.t-shirt.shopping_testing.0.html  no_email_us_5.tablet.shopping_testing.0.html  no_email_us_5.tee.shopping_testing.0.html  no_email_us_5.towels.shopping_testing.0.html  no_email_us_5.tyre.shopping_testing.0.html  no_email_us_5.underwear.shopping_testing.0.html  no_email_us_5.wallet.shopping_testing.0.html  no_email_us_5.wardrobes.shopping_testing.0.html  no_email_us_5.watches.shopping_testing.0.html  no_email_us_5.wheel.shopping_testing.0.html
docker-server/: Dockerfile  compose.yml
src/: App.hs  Index.hs  Main.hs  PageRank.hs  Parser.hs  Utils.hs  input.txt  inverted_index.txt  output.txt  pageRankData.txt
