cabal-version: 2.4
name: app
version: 0.4.0
synopsis: FP project
homepage: https://github.com/xsivan/FP_haskell
bug-reports: https://github.com/xsivan/FP_haskell/issues
license: MIT
license-file: LICENSE
author: Luxao, Svidran, Ivan
extra-source-files: CHANGELOG.md

executable app
    build-depends:
        base ^>=4.16.1.0,
        containers
    default-language: Haskell2010
    ghc-options: -main-is App
    hs-source-dirs: src
    main-is: App.hs

executable parser
    build-depends:
        aeson,
        base ^>=4.16.1.0,
        base64-bytestring,
        bytestring,
        containers,
        directory,
        network-uri,
        tagsoup,
        time,
        split,
        random
    default-language: Haskell2010
    ghc-options: -main-is Parser
    hs-source-dirs: src
    main-is: Parser.hs
    other-extensions: DeriveGeneric, OverloadedStrings
    other-modules: Utils

executable utils
    build-depends:
        base ^>=4.16.1.0,
        base64-bytestring,
        bytestring,
        containers,
        directory
    default-language: Haskell2010
    ghc-options: -main-is Utils
    hs-source-dirs: src
    main-is: Utils.hs
