cabal-version: 2.4

author: Luxao, Svidran, Ivan
bug-reports: https://github.com/xsivan/FP_haskell/issues
extra-source-files: CHANGELOG.md
homepage: https://github.com/xsivan/FP_haskell
license: MIT
license-file: LICENSE
synopsis: FP project
name: app
version: 1.0.1

executable app
    build-depends:
        aeson,
        base ^>=4.16.1.0,
        base64-bytestring,
        bytestring,
        containers,
        directory,
        network-uri,
        split,
        tagsoup,
        time,
        zlib
    default-language: Haskell2010
    ghc-options: -W -main-is App
    hs-source-dirs: src
    main-is: App.hs
    other-modules: Index, PageRank, Parser, Utils

executable index
    build-depends:
        base ^>=4.16.1.0,
        base64-bytestring,
        bytestring,
        containers,
        directory,
        split,
        time,
        zlib
    default-language: Haskell2010
    ghc-options: -W -main-is Index
    hs-source-dirs: src
    main-is: Index.hs
    other-modules: Utils

executable pageRank
    build-depends:
        base ^>=4.16.1.0,
        base64-bytestring,
        bytestring,
        containers,
        directory,
        zlib
    default-language: Haskell2010
    ghc-options: -W -main-is PageRank
    hs-source-dirs: src
    main-is: PageRank.hs
    other-modules: Utils

executable parser
    build-depends:
        aeson,
        base ^>=4.16.1.0,
        base64-bytestring,
        bytestring,
        containers,
        directory,
        network-uri,
        tagsoup,
        time,
        zlib
    default-language: Haskell2010
    ghc-options: -W -main-is Parser
    hs-source-dirs: src
    main-is: Parser.hs
    other-extensions: DeriveGeneric, OverloadedStrings
    other-modules: Utils

executable utils
    build-depends:
        base ^>=4.16.1.0,
        base64-bytestring,
        bytestring,
        containers,
        directory,
        zlib
    default-language: Haskell2010
    ghc-options: -W -main-is Utils
    hs-source-dirs: src
    main-is: Utils.hs
